Criação de nova pagina(index2) e alteração na pagina index, sobre e contatos.

--- a/contatos.html
+++ b/contatos.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <hearder>
+        <a href="index.html" class="logo"><img src="./imagens/logo.png" alt="Logo do site: fundo branco com sol em amarelo, um avião  e um navio andando para lados opostos."width=100 />        <!--LOGO-->
 
+            <ul class="navlist">
+                <li><a href="#home"> Home </a></li>
+                <li><a href="sobre.html"> Sobre </a></li>
+                <li><a href="contatos.html"> Contatos </a></li>
+            </ul><!--MENU-->
+    </hearder>
 
-
-<!--Contatos-->
+    <!--Contatos-->
 <section class="contatos" id="contatos">
     <div class="container">
         <div>
@@ -14,3 +29,19 @@
                 <input type="submit" name="submit" valeu="submit">
             </form>
         </div>    
+        <div>    
+            <footer> <!--roda pé-->
+            <div class="social-midia">   
+                <a href="facebook"><img src="./imagens/facebook.png" width="70"/></a>
+                <a  href="github"><img src="./imagens/github2.png" width="70"/></a>
+            </div>    
+            <div>
+                <h6>Feito por Flávio Santos</h6>
+            </div>    
+            </footer>    
+        </div>       
+    
+</body>
+</html>
+
+
